finished up css styles and added more containers in index

--- a/index.html
+++ b/index.html
@@ -1,24 +1,24 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="styesheet" href="style.css">
-    <title>Catdoption</title>
-</head>
-<body>
+    <title>The Holy Grail</title>
+    <link rel="stylesheet" href="style.css">
+  </head>
+  <body>
     <div class="header">
         <div class="left-links">Header Logo</div>
         <div class="right-links">
             <ul>
-                <li><a href="#">"header link 1"</a></li>
-                <li><a href="#">"header link 2"</a></li>
-                <li><a href="#">"header link 3"</a></li>
+                <li><a href="#">header link 1</a></li>
+                <li><a href="#">header link 2</a></li>
+                <li><a href="#">header link 3</a></li>
             </ul>
         </div>
     </div>
-    <div class="body">
+    <div class="container">
         <div class="first">
             <div class="about">
                 <div class="title">This website is awesome</div>
@@ -44,19 +44,24 @@
         <div class="quote">Why would you hurt someone you love? why would you feel nothing when she cries?
             <div class="author"> -Nadya Dev</div>
             </div>
+          </div>  
 
         <div class="fourth">
-            <div class="title3">Call to action! it's time!
+            <div class="sign-box">
+            <div class="content">   
+            <div class="title3">Call to action! it's time!</div>
                 <div class="text">Sign up for our product by clicking that button</div>
+               </div> 
             <button class="sign-up">sign up here!</button>
+            
+            </div>
             </div>
         <div class="footer">
-            Copyright The Odin Project
+            <div class=footer-text>Copyright The Odin Project</div>
             </div>
         </div>
         </div>
 
     </div>
-    
-</body>
+  </body>
 </html>
