arranged everything in flexbox

--- a/index.html
+++ b/index.html
@@ -25,23 +25,32 @@
                 <div class="desc">This is just some subtext about the website to put under the title lolzor!</div>
                 <button class="sign-up">Sign up</button>
             </div>
+            
             <div class="placeholder">this is a placeholder for an image</div>
         </div>
         <div class="second">
             <div class="title2">Some random information</div>
-            <div class="container"> 
+            <div class="container2">
+                <div class="item"> 
                 <div class="box"></div>
                 <div class="card">this is some subtext under an illustration of an image</div>
+                </div>
+                <div class="item">
                 <div class="box"></div>
                 <div class="card">this is some subtext under an illustration of an image</div>
+                </div>
+                <div class="item">
                 <div class="box"></div>
                 <div class="card">this is some subtext under an illustration of an image</div>
+                </div>
+                <div class="item">
                 <div class="box"></div>
                 <div class="card">this is some subtext under an illustration of an image</div>
+                </div>
             </div>
         </div>
         <div class="third">
-        <div class="quote">Why would you hurt someone you love? why would you feel nothing when she cries?
+        <div class="quote">What stands between you and what you want is yourself
             <div class="author"> -Nadya Dev</div>
             </div>
           </div>  
@@ -54,6 +63,7 @@
                </div> 
             <button class="sign-up">sign up here!</button>
             
+            </div>
             </div>
             </div>
         <div class="footer">
